# AdversariaLLM

./: .gitignore  README.md  attack_documentation.md  final-results.jsonl  purge_orphans.py  pyproject.toml  run_attacks.py  run_judges.py  run_sampling.py  setup.py  submission_guide.md
adversariallm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
adversariallm/attacks/: attack.py  direct.py  gcg_refusal.py  human_jailbreaks.py  inpainting.py  pair.py  pgd.py  pgd_discrete.py
adversariallm/dataset/: adv_behaviors.py  alpaca.py  jbb_behaviors.py  mmlu.py  or_bench.py  prompt_dataset.py  refusal_direction.py  strong_reject.py  xs_test.py
adversariallm/io_utils/: __init__.py  config.py  database.py  logging.py  model_loading.py  resources.py
adversariallm/lm_utils/: generation.py
conf/: config.yaml  paths.yaml  sweep_across_models.yaml
conf/attacks/: attacks.yaml
conf/models/: models.yaml
plots/program_length_vs_asr/: program_length_asr_points.csv  program_length_asr_points.json  program_length_assumptions.json
scripts/: plot_flops_vs_asr.py  plot_program_length_vs_asr.py  score_missing_strong_reject.py  slurm_autodan_olmo3_7b_long_sr_array.sh  slurm_autodan_smollm3_safety_pair_safe_long_sr_array.sh  slurm_autodan_smollm3_safety_pair_unsafe_long_sr_array.sh  slurm_backfill_strong_reject_qwen3_llama3.sh  slurm_crescendo_olmo3_7b_long_sr_array.sh  slurm_crescendo_smollm3_safety_pair_safe_long_sr_array.sh  slurm_crescendo_smollm3_safety_pair_unsafe_long_sr_array.sh  slurm_gcg_olmo3_7b_long_sr_array.sh  slurm_gcg_smollm3_safety_pair_safe_long_sr_array.sh  slurm_gcg_smollm3_safety_pair_unsafe_long_sr_array.sh  slurm_olmo3_7b_short_unkillable_4gpu_adapter.sh  slurm_pair_olmo3_7b_long_sr_array.sh  slurm_pair_smollm3_safety_pair_safe_long_sr_array.sh  slurm_pair_smollm3_safety_pair_unsafe_long_sr_array.sh  slurm_pgd_olmo3_7b_long_sr_array.sh  slurm_pgd_smollm3_safety_pair_safe_long_sr_array.sh  slurm_pgd_smollm3_safety_pair_unsafe_long_sr_array.sh  slurm_score_missing_strong_reject_pgd_main.sh
src/attacks/: direct.py  gcg_refusal.py
src/dataset/: refusal_direction.py
src/lm_utils/: generation.py  text_generation.py
tests/: test_actor_attack.py  test_dataset.py  test_json_schema.py  test_lm_utils.py  test_model_config.py  test_text_generation_interface.py
tests/test_attacks/: test_actor.py  test_ample_gcg.py  test_autodan.py  test_beast.py  test_bon.py  test_crescendo.py  test_direct.py  test_gcg.py  test_gcg_refusal.py  test_gcg_reinforce.py  test_human_jailbreaks.py  test_pair.py  (+4 more)
(+4 files in other folders)
